Selector arguments now take EntityNBT
- Improved documentation SelectorArgumentsBuilder
- Improved documentation and added missing method dropChances to MobNBT
- Improved documentation and made selectedItem use SingleItemStack class in PlayerNBT
- Improved documentation of SingleItemStack
- Updated Main functions